@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: postscript.c,v 1.29 2003/01/08 19:30:47 thyssen Exp $
+ * $Id: postscript.c,v 1.30 2003/03/20 20:18:11 thyssen Exp $
  */
 
 #include "config.h"
@@ -834,7 +834,7 @@ PrintPostScriptCubeAnalysis( FILE *pf, matchstate *pms,
 	return;
     
     SetCubeInfo( &ci, pms->nCube, pms->fCubeOwner, fPlayer, pms->nMatchTo,
-		 pms->anScore, pms->fCrawford, fJacoby, nBeavers );
+		 pms->anScore, pms->fCrawford, pms->fJacoby, nBeavers );
     
     if( !GetDPEq( NULL, NULL, &ci ) )
 	/* No cube action possible */
